--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - ./app/test:/home/node/app
     command: >
       bash -c "cd /home/node/app
+      && rm -rf build
       && npm install
       && npm run-script build"
 
