--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       && npm run build"
 
   ui:
+    container_name: dev_pledge_ui
     image: httpd
     environment:
       docker: "true"
