--- a/app/app/package.json
+++ b/app/app/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "4.0.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "css-loader": "0.28.7",
+    "css-loader": "^0.28.11",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -38,7 +38,7 @@
     "react-dom": "^16.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
-    "style-loader": "0.19.0",
+    "style-loader": "^0.20.3",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
@@ -52,8 +52,10 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
+    "css-loader": "^0.28.7",
     "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.7"
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.19.0"
   },
   "jest": {
     "collectCoverageFrom": [
