--- a/app/app/package.json
+++ b/app/app/package.json
@@ -37,6 +37,8 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
+    "raven-for-redux": "^1.3.1",
+    "raven-js": "^3.24.1",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
