--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     networks:
       - default
       - sentry_network
+      - cache_network
 
   mysql-db:
     restart: always
@@ -49,5 +50,9 @@ networks:
   sentry_network:
     external:
       name: global_sentry
+
+  cache_network:
+    external:
+      name: devpledge_cache
 
 
