--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - .app-dev-env
       - .sentry-env
     volumes:
-      - ./app/app/build:/var/www/html:cached
+      - ./app/app/build:/var/www/html/build:cached
       - ./api:/var/www/html/api:cached
     expose:
       - 80
