restructure UI api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,13 @@ services:
       && yarn
       && yarn build"
 
+  ui-api-composer:
+    image: twosee/swoole-coroutine
+    working_dir: /app/src
+    volumes:
+      - ./api:/app/src
+    command: composer install
+
   ui:
     container_name: dev_pledge_ui
     image: php:7.2-apache
@@ -25,25 +32,12 @@ services:
     volumes:
       - ./app/app/build:/var/www/html/build:cached
       - ./api:/var/www/html/api:cached
-      - ./vendor:/var/www/html/vendor:cached
     expose:
       - 80
     networks:
       - default
       - sentry_network
       - cache_network
-
-  mysql-db:
-    restart: always
-    image: mysql:latest
-    environment:
-      MYSQL_ROOT_PASSWORD: 'test_pass'
-      MYSQL_USER: 'test'
-      MYSQL_PASS: 'pass'
-    volumes:
-     - ./data/mysql:/var/lib/mysql:cached
-    ports:
-      - 3313:3306
 
 networks:
   default:
