--- a/package.json
+++ b/package.json
@@ -1,3 +1,6 @@
 {
-  "dependencies": {}
+  "dependencies": {
+    "draft-js-markdown-shortcuts-plugin": "^0.5.0",
+    "draft-js-plugins-editor": "^2.1.1"
+  }
 }
