--- a/app/app/package.json
+++ b/app/app/package.json
@@ -20,6 +20,8 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "draft-js": "^0.10.5",
+    "draft-js-plugins-editor": "^2.0.0",
+    "draft-js-markdown-shortcuts-plugin": "^0.5.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
