--- a/app/app/public/manifest.json
+++ b/app/app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "DevPledge",
+  "name": "DevPledge - Open Source Crowd Funded Networking",
   "icons": [
     {
       "src": "favicon.ico",
