--- a/app/app/package.json
+++ b/app/app/package.json
@@ -20,8 +20,8 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "draft-js": "^0.10.5",
-    "draft-js-plugins-editor": "^2.0.0",
     "draft-js-markdown-shortcuts-plugin": "^0.5.0",
+    "draft-js-plugins-editor": "^2.0.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -48,6 +48,7 @@
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-flatpickr": "^3.6.4",
     "react-icons": "^3.0.5",
     "react-redux": "^5.0.7",
     "react-router-config": "^1.0.0-beta.4",
