--- a/app/app/package.json
+++ b/app/app/package.json
@@ -22,6 +22,7 @@
     "draft-js": "^0.10.5",
     "draft-js-markdown-shortcuts-plugin": "^0.5.0",
     "draft-js-plugins-editor": "^2.0.0",
+    "draftjs-to-markdown": "^0.5.1",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -50,6 +51,7 @@
     "react-dom": "^16.2.0",
     "react-flatpickr": "^3.6.4",
     "react-icons": "^3.0.5",
+    "react-markdown": "^4.0.1",
     "react-redux": "^5.0.7",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
