--- a/app/app/package.json
+++ b/app/app/package.json
@@ -55,6 +55,7 @@
     "react-redux": "^5.0.7",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
+    "react-stripe-elements": "^2.0.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
@@ -77,7 +78,7 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.7",
-    "node-sass": "^4.7.2",
+    "node-sass": "4.7.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.19.0"
   },
